adjusted team and role box to prevent content overflow

--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -10,7 +10,7 @@
 }
 
 .profile-card {
-    width: 40%;
+    /* width: 40%; */
     display: flex;
     flex-direction: row;
     gap: 2rem;
@@ -45,11 +45,13 @@
 .mini-box {
     width: 100%;
     height: 7rem;
+    padding: 1rem;
+    padding-right: 3rem;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    gap: 2rem;
+    gap: 3rem;
     background-color: var(--item-colour);
 }
 
@@ -67,7 +69,10 @@
 
 .profile-role:first-of-type, .profile-team:first-of-type {
     font-weight: 700;
-    transform: translateX(-20px);
+}
+
+.profile-role:last-of-type, .profile-team:last-of-type {
+    transform: translateX(20px);
 }
 
 .profile-edit {
